getting the filter options form tags in structs of the model
