# internal/models/program.go
@@ -9,20 +9,20 @@ import (
 )
 
 type Program struct {
-	ID uint `gorm:"primaryKey"`
+	ID uint `gorm:"primaryKey" queryParam:"id"`
 
-	UserID uint `gorm:"not null"`
+	UserID uint `gorm:"not null" queryParam:"user_id"`
 	User   User
 
-	Name        string  `gorm:"size:100;not null"`
+	Name        string  `gorm:"size:100;not null" queryParam:"name"`
 	Description string  `gorm:"type:text"`
-	Budget      float64 `gorm:"type:numeric(12,2);not null"`
-	BidPrice    float64 `gorm:"type:numeric(10,2);not null"`
-	StartDate   *time.Time
-	EndDate     *time.Time
-	IsActive    bool `gorm:"default:true"`
-	IsVerified  bool `gorm:"default:true"`
-	CreatedAt   time.Time
+	Budget      float64 `gorm:"type:numeric(12,2);not null" queryParam:"budget"`
+	BidPrice    float64 `gorm:"type:numeric(10,2);not null" queryParam:"bid_price"`
+	StartDate   *time.Time `queryParam:"start_date"`
+	EndDate     *time.Time `queryParam:"end_date"`
+	IsActive    bool `gorm:"default:true" queryParam:"is_active"`
+	IsVerified  bool `gorm:"default:true" queryParam:"is_verified"`
+	CreatedAt   time.Time `queryParam:"created_at"`
 	UpdatedAt   time.Time
 	Metadata    ProgramMetaData `gorm:"type:jsonb"`
 }
